<resources>
    <string name="place_holder_time">00:00:00</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="stop">Stop</string>

    <string name="place_holder_question">question</string>
    <string name="place_holder_measure_progress">insert number</string>
    <string name="to">To...</string>
    <string name="reach">achievement</string>
</resources>