<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/home_timer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <TextView
            android:id="@+id/timeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_holder_time"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="60sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/resetButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/startButton"
                app:layout_constraintTop_toTopOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/home_question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_holder_question"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/noButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/noButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/yesButton"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:orientation="vertical"
        android:id="@+id/home_answer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/color_primary_variant"
            android:layout_margin="8dp"
            android:padding="8dp"

            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pagesET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_holder_measure_progress"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:inputType="numberDecimal"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_BTN_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Stats"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/home_LBL_ad"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:text="--------"
        android:textSize="24sp"/>

</LinearLayout>